--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Abacus Simulator</title>
-    <script src="./talmas.js"></script>
+    <script src="./script.js"></script>
     <script type="text/javascript">
       function run() {
+        debugger;
         var abacus = new Abacus("myAbacus", 0);
         abacus.init();
       }
@@ -15,7 +16,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body onload="run();" style="background-color: #d8d9da !important;">
+  <body onload="run();" style="background-color: #d8d9da !important">
     <div style="padding: 50px">
       <img src="static/talmas_logo.png" alt="Talmas" class="logo" />
     </div>
@@ -40,11 +41,7 @@
             />
 
             <!-- Marks and text -->
-            <g
-              font-family="Arial"
-              font-size="20"
-              fill="black"
-            >
+            <g font-family="Arial" font-size="20" fill="black">
               <text x="45" y="27" text-anchor="end">10</text>
               <text x="35" y="67" text-anchor="end">9</text>
               <text x="35" y="107" text-anchor="end">8</text>
@@ -108,11 +105,7 @@
             />
 
             <!-- Marks and text -->
-            <g
-              font-family="Arial"
-              font-size="20"
-              fill="black"
-            >
+            <g font-family="Arial" font-size="20" fill="black">
               <!-- Starting mark at 10 -->
               <text x="80" y="27" text-anchor="end">10</text>
               <!-- Marks and text at 10-unit intervals -->
